<resources>
    <string name="app_name">GitHubViewer</string>
    <string name="users">Users</string>
    <string name="repos">Repositories</string>
    <string name="loadPage">Load users</string>
    <string name="loadMore">Load more users</string>
    <string name="download_page">Download page</string>
    <string name="no_call">Not successful preparing call</string>
    <string name="no_connect">Please, set connect to Internet</string>
    <string name="not_loading_data">No loading data</string>
    <string name="user_id">UserID:</string>
    <string name="download_users">Download users</string>
    <string name="todo">TODO</string>
    <string name="avatars_image">Avatars image</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_clear">X</string>
    <string name="number_back"><![CDATA[<<]]></string>
    <string name="number_mask_symbol">*</string>
    <string name="enter_code">Please enter code</string>
    <string name="enter_new_code">Please enter new code</string>
    <string name="repeat_code">Please repeat code</string>
    <string name="wrong_code">Wrong entered code!</string>
    <string name="mismatch_code">Entered codes mismatch!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alert!!!</string>
    <string name="query_reset_psw">Reset code?</string>
    <string name="test_enter_open_text">Enter open text:</string>
    <string name="test_test">Test!</string>
    <string name="test_encrypt_text">Encrypt_text:</string>
    <string name="test_decrypt_text">Decrypt text:</string>
    <string name="error">Error!!!:</string>
</resources>
