<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/message_text_sys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_two"
        android:textColor="#ff4081"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_one"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/message_text_sys" />

    <TextView
        android:id="@+id/code_text_0"
        android:layout_width="@dimen/code_width"
        android:layout_height="@dimen/code_height"
        android:layout_marginTop="@dimen/default_margin_two"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/code_text_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_text" />

    <TextView
        android:id="@+id/code_text_1"
        android:layout_width="@dimen/code_width"
        android:layout_height="@dimen/code_height"
        android:layout_marginTop="@dimen/default_margin_two"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/code_text_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/code_text_0"
        app:layout_constraintTop_toBottomOf="@+id/message_text" />

    <TextView
        android:id="@+id/code_text_2"
        android:layout_width="@dimen/code_width"
        android:layout_height="@dimen/code_height"
        android:layout_marginTop="@dimen/default_margin_two"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/code_text_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/code_text_1"
        app:layout_constraintTop_toBottomOf="@+id/message_text" />

    <TextView
        android:id="@+id/code_text_3"
        android:layout_width="@dimen/code_width"
        android:layout_height="@dimen/code_height"
        android:layout_marginTop="@dimen/default_margin_two"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/code_text_2"
        app:layout_constraintTop_toBottomOf="@+id/message_text" />

    <TableLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"

        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_7"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_8"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_9"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_4"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_5"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_6"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_1"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_2"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_3"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_clear"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginStart="@dimen/default_margin_mini"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_0"
                android:textColor="@android:color/black"
                android:layout_width="match_parent" />

            <Button
                android:id="@+id/button_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_marginEnd="@dimen/default_margin_mini"
                android:layout_marginBottom="@dimen/default_margin_mini"
                android:background="@android:color/darker_gray"
                android:text="@string/number_back"
                android:textColor="@android:color/holo_orange_light"
                android:layout_width="match_parent" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>